# lemurian

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/design/: human-in-the-loop.md  opentelemetry.md  provider-expansion.md  streaming.md
examples/: agent.py  capabilities.py  knowledge_capabilities.py  knowledge_capability_example.py  local_research_agent.py  local_research_agent_example.py  modal_vllm.py  notes_agent.py  notes_agent_example.py
examples/local_research_agent_docs/poems/: A Dream Within A Dream.md  A Valentine.md  Alone.md  Annabel Lee.md  Dream-Land.md  Eldorado.md  For Annie.md  Lenore.md  Sonnet - To Science.md  Spirits of the Dead.md  The Bells.md  The City in the Sea.md  The Conqueror Worm.md  The Haunted Palace.md  The Raven.md  The Valley of Unrest.md  To The River.md
examples/local_research_agent_docs/stories/: A Descent into the Maelstrom.md  Berenice.md  Eleonora.md  Hop-Frog.md  Ligeia.md  Manuscript Found in a Bottle.md  Mesmeric Revelation.md  Never Bet the Devil Your Head.md  Silence - A Fable.md  Some Words With a Mummy.md  The Angel of the Odd.md  The Balloon Hoax.md  The Black Cat.md  The Cask of Amontillado.md  The Facts in the Case of M. Valdemar.md  The Fall of the House of Usher.md  The Gold Bug.md  The Imp of the Perverse.md  The Island of the Fay.md  The Man of the Crowd.md  The Masque of the Red Death.md  The Murders in the Rue Morgue.md  The Mystery of Marie Roget.md  The Oblong Box.md  The Oval Portrait.md  The Pit and the Pendulum.md  The Premature Burial.md  The Purloined Letter.md  The Spectacles.md  The System of Dr. Tarr and Prof. Fether.md  The Tell-Tale Heart.md  William Wilson.md
scripts/: gen_example_pages.py  gen_ref_pages.py  modal_deploy.py
src/lemurian/: __init__.py  agent.py  capability.py  context.py  events.py  handoff.py  instrumentation.py  message.py  provider.py  runner.py  session.py  sse.py  state.py  streaming.py  swarm.py  tools.py
src/scripts/: dummy_agent.py  modal_vllm.py
tests/: conftest.py  test_agent.py  test_message.py  test_provider.py  test_runner.py  test_swarm.py  test_tools.py
tests/integration/: test_agent_lifecycle.py  test_runner.py  test_streaming.py  test_swarm.py
tests/unit/: test_capability.py  test_handoff.py  test_instrumentation.py  test_message.py  test_provider.py  test_session.py  test_streaming.py  test_tools.py
