[project]
name = "lemurian"
version = "1.2.0"
description = "A framework for building AI agents in Python"
readme = "README.md"
authors = [
    { name = "Maxwell Margenot", email = "max.margenot@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docstring-parser>=0.16",
    "openai>=1.107.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
local = [
    "outlines>=1.2.5",
    "vllm>=0.10.2",
]
modal = [
    "modal>=0.73.0",
]
