[project]
name = "lemurian"
version = "1.3.0"
description = "A framework for building AI agents in Python"
readme = "README.md"
authors = [
    { name = "Maxwell Margenot", email = "max.margenot@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docstring-parser>=0.16",
    "openai>=1.107.0",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[dependency-groups]
dev = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
local = [
    "outlines>=1.2.5",
    "vllm>=0.10.2",
]
modal = [
    "modal>=0.73.0",
]
litellm = [
    "litellm>=1.67.0",
]
docs = [
    "zensical",
    "mkdocstrings[python]>=0.29",
    "griffe-pydantic>=1.0",
]
examples = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "numpy>=2.2.6",
    "opentelemetry-sdk>=1.20.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "transformers>=4.56.2",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]
